--- a/app/views/contact_information/show.html.erb
+++ b/app/views/contact_information/show.html.erb
@@ -16,6 +16,7 @@
         <%= show_contact_field :phone %>
         <%= show_contact_field :location %>
         <%= show_contact_field :other_information %>
+        <p><strong><%= t('system_settings.primero_version') %>:</strong> <%= @system_settings.primero_version %></p>
        </div>
     </div>
   </div>
