--- a/app/views/reports/_toolbar.html
+++ b/app/views/reports/_toolbar.html
@@ -13,7 +13,7 @@
           <div class="large-12 columns">
             <ul class="inline-list">
               <li>
-                <%= link_to t("buttons.back"), reports_path, class: 'btn green-button' %>
+                <%= link_to icon('angle-left') + t("buttons.back"), reports_path, class: 'btn green-button back-button' %>
               </li>
               <% if controller.action_name != 'edit' %>
                 <ul id="menu" class="sf-menu">
