--- a/app/assets/stylesheets/primero/scrollbars.scss
+++ b/app/assets/stylesheets/primero/scrollbars.scss
@@ -6,7 +6,7 @@
   margin-right: 15px !important;
 }
 
-div#content, div.reveal-modal, div.side-nav-container {
+div#content:not(.dashboards), div.reveal-modal, div.side-nav-container {
   .mCSB_container {
     margin-right: 0 !important;
   }
@@ -16,12 +16,39 @@ div#content, div.reveal-modal, div.side-nav-container {
   }
 }
 
-div#content, div.revel-modal {
+div#content:not(.dashboards), div.revel-modal {
   .mCSB_buttonUp, .mCSB_buttonDown {
     display: none !important;
   }
 
   .mCSB_draggerContainer {
     margin: 0 !important;
+  }
+}
+
+.scrollable {
+  .mCSB_scrollTools {
+    margin-right: 30px;
+  }
+
+  .mCSB_dragger_bar {
+    padding: 0 !important;
+    margin-left: -3px !important;
+  }
+
+  .mCSB_draggerRail {
+    padding: 0 1px !important;
+  }
+
+  .mCSB_draggerContainer, .mCSB_dragger {
+    padding: 0 !important;
+  }
+
+  .mCSB_draggerContainer {
+    margin-left: 16px !important;
+  }
+
+  .mCustomScrollBox, .mCSB_container {
+    padding-left: 0 !important;
   }
 }
