--- a/app/views/home/_case_protection_concerns.html.erb
+++ b/app/views/home/_case_protection_concerns.html.erb
@@ -1,6 +1,6 @@
 <div class="panel">
   <div class="panel_header">
-    <h4><%= t('dashboard.preliminary_protection_concerns') %></h4>
+    <h4><%= t('dashboard.protection_concerns') %></h4>
     <table cellspacing="0" cellpadding="0" class="table-counts table-floating-header">
       <thead>
       <tr>
