--- a/app/views/users/_mobile_login_history.html.erb
+++ b/app/views/users/_mobile_login_history.html.erb
@@ -10,9 +10,9 @@
 
     <% @user.mobile_login_history.reverse.each do |event| %>
       <tr>
-        <td><%= event[:timestamp].in_time_zone(@user.time_zone) %></td>
-        <td><%= event[:imei] %></td>
-        <td><%= event[:mobile_number] %></td>
+        <td><%= event.login_timestamp.in_time_zone(@user.time_zone) %></td>
+        <td><%= event.imei %></td>
+        <td><%= event.mobile_number %></td>
       </tr>
     <% end %>
 
