--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,6 +36,7 @@
 
         <%= resource_show_field @user, 'full_name', 'user.full_name' %>
         <%= resource_show_field @user, 'user_name', 'login.username' %>
+        <%= resource_show_field @user, 'code', 'user.code' %>
 
         <div class="row">
           <div class="medium-4 columns">
