--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -25,10 +25,10 @@
                   <%= f.label :visible, t("visible", :locale => I18n.default_locale), :class => 'key inline' %>
                 </div>
                 <div class="medium-9 columns">
-                  <%= f.check_box :visible?, {}, "true", "false" %>
+                  <%= f.check_box :visible?, {:class => 'visible'}, "true", "false" %>
                 </div>
               </div>
-              <div class="row">
+              <div class="row mobile_form">
                 <div class="medium-3 columns">
                   <%= f.label :mobile_form, t("mobile_form", :locale => I18n.default_locale), :class => 'key inline' %>
                 </div>
