Change visible label name when locale is en.

--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -11,7 +11,7 @@
     <p class="chkbox_visible">
       <div class="row">
         <div class="medium-3 columns">
-          <%= fld.label :visible, t("visible"), :class => 'key inline' %>
+          <%= fld.label :visible, t("visible_for_web"), :class => 'key inline' %>
         </div>
         <div class="medium-9 columns">
           <%= fld.check_box :visible?, {}, "true", "false" %>
