--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -22,7 +22,7 @@
             <% unless @form_section.perm_enabled? %>
               <div class="row">
                 <div class="medium-3 columns">
-                  <%= f.label :visible, t("visible", :locale => I18n.default_locale), :class => 'key inline' %>
+                  <%= f.label :visible, t("visible_for_web", :locale => I18n.default_locale), :class => 'key inline' %>
                 </div>
                 <div class="medium-9 columns">
                   <%= f.check_box :visible?, {:class => 'visible'}, "true", "false" %>
@@ -30,7 +30,7 @@
               </div>
               <div class="row mobile_form">
                 <div class="medium-3 columns">
-                  <%= f.label :mobile_form, t("mobile_form", :locale => I18n.default_locale), :class => 'key inline' %>
+                  <%= f.label :mobile_form, t("visible_for_mobile", :locale => I18n.default_locale), :class => 'key inline' %>
                 </div>
                 <div class="medium-9 columns">
                   <%= f.check_box :mobile_form?, {}, "true", "false" %>
