SL-503: Implemented JS validation for date <= today

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,6 +101,9 @@
         validators: {
             primeroDate: function(el, required, parent) {
               return _primero.abide_validator_date(el, required, parent);
+            },
+            primeroDateNotInFuture: function(el, required, parent) {
+              return _primero.abide_validator_date_not_future(el, required, parent);
             }
         }
     }
