--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -29,6 +29,18 @@
         </div>
       </div>
     </p>
+    <% if @field.type == 'date_field' %>
+    <p class="chkbox_not_future_date">
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= fld.label :not_future_date, t("not_future_date"), :class => 'key inline' %>
+        </div>
+        <div class="medium-9 columns">
+          <%= fld.check_box :not_future_date?, {}, "true", "false" %>
+        </div>
+      </div>
+    </p>
+    <% end %>
     <% if @field.type == 'subform' %>
     <p>
       <div class="row">
