--- a/app/views/form_section/_date_field.html.erb
+++ b/app/views/form_section/_date_field.html.erb
@@ -13,8 +13,10 @@
   </div>
   <div class="medium-8 columns">
     <% if date_field.required %><span class="required form-section-required">*</span><% end %>
-    <%= text_field_tag name, value, :class => 'form_date_field has_help', :id => field_id, :disabled => date_field.editable == false ? true : false,
-                       :editable => date_field.editable, "data-abide-validator" => "primeroDate", required: date_field.required %>
+    <%= text_field_tag name, value, :class => 'form_date_field has_help', :id => field_id,
+    :disabled => date_field.editable == false ? true : false, :editable => date_field.editable,
+    "data-abide-validator" => date_field.not_future_date == true ? "primeroDateNotInFuture" : "primeroDate",
+    required: date_field.required %>
     <p class="help"><%= t("fields.date_help") %></p>
   </div>
 </div>
