Add tr_subform_id as property of potential_match model and fix matching method.

--- a/app/views/potential_matches/index.html.erb
+++ b/app/views/potential_matches/index.html.erb
@@ -6,6 +6,7 @@
       <tr>
         <th>child_id</th>
         <th>tracing_request_id</th>
+        <th>tr_subform_id</th>
         <th>score</th>
         <th>status</th>
       </tr>
@@ -15,6 +16,7 @@
           <tr>
             <td><%= match.child_id %></td>
             <td><%= match.tracing_request_id %></td>
+            <td><%= match.tr_subform_id %></td>
             <td><%= match.score %></td>
             <td><%= match.status %></td>
           </tr>
