--- a/app/views/record_shared/_flag_records.html.erb
+++ b/app/views/record_shared/_flag_records.html.erb
@@ -4,22 +4,24 @@
 
 <div class="reveal-modal medium" id="<%= "#{model.name.underscore.downcase}_flag_records" %>" style="background: none repeat scroll 0 0 #f9faf6;" data-reveal>
   <a class="close-reveal-modal">&#215;</a>
-  <div class="row flag_records">
-    <div class="medium-5 columns">
-      <label for="<%=model.name.underscore.downcase%>_flag_message"><%=t("#{model.name.underscore.downcase}.flag_reason")%>:</label>
-      <input type="text" class="flag_message" value="" size="30" name="flag_message" id="<%=model.name.underscore.downcase%>_flag_message" autocomplete="off">
+  <form data-abide>
+    <div class="row flag_records">
+      <div class="medium-5 columns">
+        <label for="<%=model.name.underscore.downcase%>_flag_message"><%=t("#{model.name.underscore.downcase}.flag_reason")%>:</label>
+        <input type="text" class="flag_message" value="" size="30" name="flag_message" id="<%=model.name.underscore.downcase%>_flag_message" autocomplete="off">
+      </div>
+      <div class="medium-5 columns">
+        <label for="<%=model.name.underscore.downcase%>_flag_date"><%=t("#{model.name.underscore.downcase}.flag_reason_date")%>:</label>
+        <input type="text" class="form_date_field flag_date" size="12" name="flag_date" id="<%=model.name.underscore.downcase%>_flag_date" autocomplete="off" data-abide-validator="primeroDate">
+      </div>
+      <div class="medium-2 columns">
+        <a class="flag btn green-button" style="margin-top:1.3rem"
+          data-request_url="<%= request.url %>"
+          data-form_action="<%= send("#{model.name.underscore.downcase}_flag_records_path") %>"
+          data-submit_error_message="<%=t("#{model.name.underscore.downcase}.flag_records_error_message")%>"
+          data-selected_records_error_message="<%=t("#{model.name.underscore.downcase}.selected_records_error_message")%>"
+          ><%= t("buttons.flag_records") %></a>
+      </div>
     </div>
-    <div class="medium-5 columns">
-      <label for="<%=model.name.underscore.downcase%>_flag_date"><%=t("#{model.name.underscore.downcase}.flag_reason_date")%>:</label>
-      <input type="text" class="form_date_field flag_date" size="12" name="flag_date" id="<%=model.name.underscore.downcase%>_flag_date" autocomplete="off">
-    </div>
-    <div class="medium-2 columns">
-      <a class="flag btn green-button" style="margin-top:1.3rem"
-        data-request_url="<%= request.url %>"
-        data-form_action="<%= send("#{model.name.underscore.downcase}_flag_records_path") %>"
-        data-submit_error_message="<%=t("#{model.name.underscore.downcase}.flag_records_error_message")%>"
-        data-selected_records_error_message="<%=t("#{model.name.underscore.downcase}.selected_records_error_message")%>"
-        ><%= t("buttons.flag_records") %></a>
-    </div>
-  </div>
+  </form>
 </div>
