Use record shared/list_view_table template to show all matching results.

--- a/app/views/potential_matches/index.html.erb
+++ b/app/views/potential_matches/index.html.erb
@@ -1,28 +1,1 @@
-<div class="row collapse">
-  <div class="large-9 small-9 columns">
-    <div class="clearfix"></div>
-    <table style="width: 100%;" class="record_list_view dataTable no-footer collapsed dtr-inline" cellpadding="0" cellspacing="0">
-      <thead>
-      <tr>
-        <th>child_id</th>
-        <th>tracing_request_id</th>
-        <th>tr_subform_id</th>
-        <th>score</th>
-        <th>status</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @potential_matches.each do |match| %>
-          <tr>
-            <td><%= match.child_id %></td>
-            <td><%= match.tracing_request_id %></td>
-            <td><%= match.tr_subform_id %></td>
-            <td><%= match.score %></td>
-            <td><%= match.status %></td>
-          </tr>
-      <% end %>
-      </tbody>
-    </table>
-    <div class="table_spacer"></div>
-  </div>
-</div>
+<%= render 'record_shared/list_view_table', model: PotentialMatch, record: 'potential_match', collection: @potential_matches %>
