--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,12 @@
 <div class="profile-image">
-  <% unless @child.photos.blank? %>
+
+  <% unless model.photos.blank? %>
       <div class='image'>
-        <%= link_to image_tag(child_resized_photo_path(@child, @child.primary_photo_id, 328, :ts => @child.last_updated_at), :alt => 'Profile Image'), child_resized_photo_path(@child, @child.primary_photo_id, 640)%>
+        <% if model.class.name == 'Child' %>
+            <%= link_to image_tag(child_resized_photo_path(model, model.primary_photo_id, 328, :ts => model.last_updated_at), :alt => 'Profile Image'), child_resized_photo_path(model, model.primary_photo_id, 640) %>
+            <% elsif model.class.name == 'TracingRequest' %>
+            <%= link_to image_tag(tracing_request_resized_photo_path(model, model.primary_photo_id, 328, :ts => model.last_updated_at), :alt => 'Profile Image'), tracing_request_resized_photo_path(model, model.primary_photo_id, 640) %>
+        <% end %>
         <p class='view-full-size'><%= t("child.messages.see_full_size") %> </p>
       </div>
 
