Change field name from score to average_rating in potential_match model.

--- a/app/views/potential_matches/_summary_row.html.erb
+++ b/app/views/potential_matches/_summary_row.html.erb
@@ -5,5 +5,5 @@
   </td>
   <td><%= record.child_id %></td>
   <td><%= record.tracing_request_id %></td>
-  <td><%= record.score %></td>
+  <td><%= record.average_rating %></td>
 </tr>
