--- a/app/assets/stylesheets/primero/datatables.scss
+++ b/app/assets/stylesheets/primero/datatables.scss
@@ -19,7 +19,7 @@ table.dataTable {
 
 table.dataTable thead th,
 table.dataTable thead td {
-  padding: 10px 18px;
+  padding: 10px;
   border-right: 1px solid $stroke_green_color;
   border-top: 1px solid $stroke_green_color;
   background: #ebf0e4 !important;
@@ -75,9 +75,11 @@ table.dataTable tbody tr.selected {
 table.dataTable tbody th,
 table.dataTable tbody td {
   padding: 15px 10px;
-  text-align: center;
   border-bottom: 1px dashed #ccc;
   border-right: 1px solid $stroke_green_color;
+  .icon{
+    text-align: center;
+  }
 }
 table.dataTable tbody tr td:first-child {
   border-left: 1px solid $stroke_green_color;
