include Disableable in agency model. Hide delete link from agency index

--- a/app/views/shared_configuration_resource/_table.html.erb
+++ b/app/views/shared_configuration_resource/_table.html.erb
@@ -3,9 +3,12 @@
   #object_class
   #heading_keys
   #properties
+  #hide_links
+  hide_links ||= []
   object_name = object_class.name.underscore
   object_name_plural = object_name.pluralize
-  permissions = [:show, :edit, :destroy].select{|p| can?(p, object_class)}
+  permissions = [:show, :edit, :destroy].select{|p| can?(p, object_class) && hide_links.exclude?(p)}
+
 %>
 <table id="list_table" class="list_table_2 dataTable in_content_area <%= object_name %>">
   <thead>
