--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -18,7 +18,8 @@
                  locals: {objects: @agencies,
                           object_class: Agency,
                           heading_keys: ['agency.name', 'description'],
-                          properties: ['name', 'description']} %>
+                          properties: ['name', 'description'],
+                          hide_links: [:destroy]} %>
     </div>
   </div>
 </div>
