--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -14,6 +14,7 @@
   <div class="large-8 medium-8 columns side-tab-content-container">
     <div class="side-tab-content" data-equalizer-watch>
       <% if @locations.present? %>
+        <%= render partial: 'shared_configuration_resource/table_disabled_filter'%>
         <%= render :partial => "locations/list_view_table", :locals => {:locations => @locations} %>
       <% end %>
       <div id="modal-dialog" class="hide"></div>
