--- a/app/views/agencies/_editable.html.erb
+++ b/app/views/agencies/_editable.html.erb
@@ -3,3 +3,6 @@
 <%= resource_edit_field(object, 'description', 'description', 'text_field') %>
 <%= resource_edit_field(object, 'logo', 'agencies.logo', 'file_field') %>
 <%= resource_edit_field(object, 'logo_enabled', 'agencies.logo_enabled', 'check_box') %>
+<% if can?(:disable, @agency) %>
+  <%= resource_edit_field(object, 'disabled', 'disabled.status.disabled', 'check_box') %>
+<% end %>
