--- a/app/views/shared_configuration_resource/_table_disabled_filter.erb
+++ b/app/views/shared_configuration_resource/_table_disabled_filter.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="medium-6 columns">
       <div class="float_left">
-        <small class="scope_label"><%= t("location.show") %></small>
+        <small class="scope_label"><%= t("disabled.filter_label") %></small>
         <%= select_tag :filter, disabled_options(params[:filter]), { :onchange => "this.form.submit();"} %>
       </div>
     </div>
