--- a/app/views/shared_configuration_resource/_table_disabled_filter.erb
+++ b/app/views/shared_configuration_resource/_table_disabled_filter.erb
@@ -1,3 +1,6 @@
+<%
+  sort_options ||= []
+%>
 <form class="filter_bar" autocomplete="off">
   <div class="row">
     <div class="medium-6 columns">
@@ -7,6 +10,12 @@
       </div>
     </div>
     <div class="medium-6 columns">
+      <% if sort_options.present? %>
+        <div class="float_left">
+          <small class="scope_label"><%= t("sort_by.label") %></small>
+          <%= select_tag :sort, options_for_select(sort_options, params[:sort]), { :onchange => "this.form.submit();"} %>
+        </div>
+      <% end %>
     </div>
   </div>
 </form>
