--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,6 +28,8 @@
       <% if @access_error.present? %>
           <strong><%= @access_error %></strong>
       <% end %>
+      <%= render partial: 'shared_configuration_resource/table_disabled_filter',
+                 locals: {sort_options: [[t("users.sort_by.full_name"),"full_name"],[ t("login.username"), "user_name"], [t("users.sort_by.agency"),"organization"]]}%>
       <% if @users.present? %>
           <%= render :partial => 'users_table' %>
           <div id="modal-dialog"/>
