--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -1,84 +1,86 @@
 <div id="<%= div_id %>" class="field_details" style="display:none;">
   <%= form_for @field, :url => url_for_form_section_field(@form_section.unique_id, @field), :html => {"data-abide" => '', :autocomplete => "off"} do |fld| %>
-    <%= hidden_field_tag "module_id", @module_id, :id => "field_module_id" %>
-    <div class="default_lang_panel">
-      <div class="lang_title">
-        <%= t("forms.initial_language") %>: <span><%= t("home.#{I18n.default_locale}") %></span>
+      <%= hidden_field_tag "module_id", @module_id, :id => "field_module_id" %>
+      <div class="default_lang_panel">
+        <div class="lang_title">
+          <%= t("forms.initial_language") %>: <span><%= t("home.#{I18n.default_locale}") %></span>
+        </div>
+        <div class="space"></div>
+        <%= render :partial => 'form_section/fields', :locals => {:fld => fld, :fields => fields, :given_locale => I18n.default_locale, :lookup_options => @lookup_options, :is_field_edit => true, :is_translation => false} %>
       </div>
-      <div class="space"></div>
-      <%= render :partial => 'form_section/fields', :locals => {:fld => fld, :fields => fields, :given_locale => I18n.default_locale, :lookup_options => @lookup_options, :is_field_edit => true, :is_translation => false} %>
-    </div>
-    <p class="chkbox_web_visible">
+      <p class="chkbox_web_visible">
       <div class="row">
         <div class="medium-3 columns">
           <%= fld.label :visible, t("visible_for_web"), :class => 'key inline' %>
         </div>
         <div class="medium-9 columns">
           <%= fld.check_box :visible?, {}, "true", "false" %>
-          <%= fld.hidden_field :type, :class => "field_type"%>
-        </div>
-      </div>
-    </p>
-      <p class="chkbox_mobile_visible">
-      <div class="row">
-        <div class="medium-3 columns">
-          <%= fld.label :mobile_visible, t("visible_for_mobile"), :class => 'key inline' %>
-        </div>
-        <div class="medium-9 columns">
-          <%= fld.check_box :mobile_visible?, {}, "true", "false" %>
-          <%= fld.hidden_field :type, :class => "field_type"%>
+          <%= fld.hidden_field :type, :class => "field_type" %>
         </div>
       </div>
       </p>
-    <p class="chkbox_hide_on_view_page">
-      <div class="row">
-        <div class="medium-3 columns">
-          <%= fld.label :hide_on_view_page, t("hide_on_view_page"), :class => 'key inline' %>
-        </div>
-        <div class="medium-9 columns">
-          <%= fld.check_box :hide_on_view_page?, {}, "true", "false" %>
-        </div>
+      <% if ['case', 'tracing_request'].include? @form_section.parent_form %>
+          <p class="chkbox_mobile_visible">
+          <div class="row">
+            <div class="medium-3 columns">
+              <%= fld.label :mobile_visible, t("visible_for_mobile"), :class => 'key inline' %>
+            </div>
+            <div class="medium-9 columns">
+              <%= fld.check_box :mobile_visible?, {}, "true", "false" %>
+              <%= fld.hidden_field :type, :class => "field_type" %>
+            </div>
+          </div>
+          </p>
+          <p class="chkbox_hide_on_view_page">
+          <div class="row">
+            <div class="medium-3 columns">
+              <%= fld.label :hide_on_view_page, t("hide_on_view_page"), :class => 'key inline' %>
+            </div>
+            <div class="medium-9 columns">
+              <%= fld.check_box :hide_on_view_page?, {}, "true", "false" %>
+            </div>
+          </div>
+          </p>
+          <p class="chkbox_show_on_minify_form">
+          <div class="row">
+            <div class="medium-3 columns">
+              <%= fld.label :show_on_minify_form, t("show_on_minify_form"), :class => 'key inline' %>
+            </div>
+            <div class="medium-9 columns">
+              <%= fld.check_box :show_on_minify_form?, {}, "true", "false" %>
+            </div>
+          </div>
+          </p>
+      <% end %>
+      <% if @field.type == 'date_field' %>
+          <p class="date_validation_method">
+            <%= render :partial => "form_section/add_date_validation", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present?, :is_field_edit => true} %>
+          </p>
+      <% end %>
+      <% if @field.type == 'subform' %>
+          <p>
+          <div class="row">
+            <div class="medium-3 columns">
+              <%= fld.label :subform_sort_by, t("subform_sort_by"), :class => 'key inline' %>
+            </div>
+            <div class="medium-9 columns">
+              <%= fld.select "subform_sort_by",
+                             options_for_select(@field.subform_section.fields.select { |sf| sf.type == "date_field" }
+                                                    .map { |sf| [sf.display_name, sf.name] }, @field.subform_sort_by || ''), {},
+                             required: "", 'data-placeholder' => t("fields.select_box_empty_item"),
+                             class: "chosen-select-or-new", id: "form_section_form_group_name" %>
+            </div>
+          </div>
+          </p>
+      <% end %>
+      <div class="clearfix"></div>
+      <div class="translation_lang_panel">
+        <%= render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present?, :is_field_edit => true} %>
       </div>
-    </p>
-    <p class="chkbox_show_on_minify_form">
-      <div class="row">
-        <div class="medium-3 columns">
-          <%= fld.label :show_on_minify_form, t("show_on_minify_form"), :class => 'key inline' %>
-        </div>
-        <div class="medium-9 columns">
-          <%= fld.check_box :show_on_minify_form?, {}, "true", "false" %>
-        </div>
+      <div class="clearfix"></div>
+      <div class="btn_panel">
+        <%= submit_button t("forms.save_details") %>
       </div>
-    </p>
-    <% if @field.type == 'date_field' %>
-    <p class="date_validation_method">
-      <%= render :partial => "form_section/add_date_validation", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present?, :is_field_edit => true }%>
-    </p>
-    <% end %>
-    <% if @field.type == 'subform' %>
-    <p>
-      <div class="row">
-        <div class="medium-3 columns">
-          <%= fld.label :subform_sort_by, t("subform_sort_by"), :class => 'key inline' %>
-        </div>
-        <div class="medium-9 columns">
-          <%= fld.select "subform_sort_by",
-              options_for_select(@field.subform_section.fields.select{|sf| sf.type == "date_field"}
-                    .map{|sf| [sf.display_name, sf.name] }, @field.subform_sort_by || ''), {},
-                    required: "", 'data-placeholder' => t("fields.select_box_empty_item"),
-                    class: "chosen-select-or-new", id: "form_section_form_group_name" %>
-        </div>
-      </div>
-    </p>
-    <% end %>
-    <div class="clearfix"></div>
-    <div class="translation_lang_panel">
-      <%= render :partial => "form_section/add_translations", :locals => {:fields => fields, :fld => fld, :show_drop_down => @show_add_field.present?, :is_field_edit => true }%>
-    </div>
-    <div class="clearfix"></div>
-    <div class="btn_panel">
-      <%= submit_button t("forms.save_details") %>
-    </div>
-    <div class="clearfix"></div>
+      <div class="clearfix"></div>
   <% end %>
 </div>
