--- a/app/views/record_shared/_header.html.erb
+++ b/app/views/record_shared/_header.html.erb
@@ -1,3 +1,6 @@
+<% if model.respond_to? :by_flag %>
+    <%= render partial: 'record_shared/flag_records', locals: {model: model} %>
+<% end %>
 <% if display_actions %>
   <%= render partial: 'record_shared/actions', locals: {model: model} %>
 <% end %>
