--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -5,7 +5,7 @@
   display_create = model.to_s == "PotentialMatch" ? false : true
   options = {
     display_filter: true,
-    display_actions: false,
+    display_actions: model.to_s =="PotentialMatch" ? false : true,
     display_create: display_create}.merge(opts)
 %>
 <div class="index_controls_container" data-top="50" data-bottom="40">
