Fix the bug that GBV form section can also see the mobile choices

--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -19,7 +19,7 @@
         </div>
       </div>
       </p>
-      <% if ['case', 'tracing_request'].include? @form_section.parent_form %>
+      <% if ['primeromodule-cp'].include? @module_id %>
           <p class="chkbox_mobile_visible">
           <div class="row">
             <div class="medium-3 columns">
