--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -28,7 +28,7 @@
                       <%= f.check_box :visible?, {:class => 'visible'}, "true", "false" %>
                     </div>
                   </div>
-                  <% if ['case', 'tracing_request'].include? @form_section.parent_form %>
+                  <% if ['primeromodule-cp'].include? @module_id %>
                       <div class="row mobile_form">
                         <div class="medium-3 columns">
                           <%= f.label :mobile_form, t("visible_for_mobile", :locale => I18n.default_locale), :class => 'key inline' %>
