fixed translation issue with location disabled status

--- a/app/views/locations/_list_view_table.html.erb
+++ b/app/views/locations/_list_view_table.html.erb
@@ -5,7 +5,7 @@
     <th><%= t "location.code" %></th>
     <th><%= t "location.type" %></th>
     <th><%= t "location.hierarchy" %></th>
-    <th><%= t "location.status" %></th>
+    <th><%= t "disabled.status.label" %></th>
     <th ></th>
   </tr>
   </thead>
