--- a/app/views/shared/_side_tab.html.erb
+++ b/app/views/shared/_side_tab.html.erb
@@ -2,12 +2,10 @@
   <div class="side-nav-container">
     <div class="scrolling_indicator up"><%= t('messages.scroll_up') %></div>
     <ul class="side-nav">
-      <%# TODO: We are hiding the user options for the time being. %>
-      <li class=<%= (highlight_page == 'users' ? 'current' : '') %>><%= link_to I18n.t("users.label"), users_path if can?(:index, User)%></li>
-      <% if false %>
-      <li class=<%= (highlight_page == 'unverified' ? 'current' : '') %>>
-      	<%= link_to I18n.t("users.unverified"), unverified_users_path if can?(:show, User)  %></li>
-      <% end %>
+      <%# We use UserGroup here instead of User because all users have access to manage themselves. %>
+      <%# Therefore... can? :edit, User always returns true %>
+      <li class=<%= (highlight_page == 'users' ? 'current' : '') %>>
+        <%= link_to I18n.t("users.label"), users_path if can? :edit, Role or can? :edit, UserGroup%></li>
       <li class=<%= (highlight_page == 'agencies' ? 'current' : '') %>>
         <%= link_to I18n.t("agencies.label"), agencies_path if can?(:index, Agency)  %></li>
       <li class=<%= (highlight_page == 'roles' ? 'current' : '') %>>
