--- a/app/views/form_section/_select_box.html.erb
+++ b/app/views/form_section/_select_box.html.erb
@@ -26,6 +26,9 @@
           :data => { :field_tags => field_tags}, required: select_box.required %>
     <% else %>
       <%
+        #TODO: We should combine single and multi selects and simplify this code
+        # select_box.searchable_select is a hack, refactor, refactor, refactor!  
+
         #TODO: Pending disabled for choosen.
         disabled_select_box = !select_box.editable
         #workaround to avoid present the default value (Select...) when the select_box
