--- a/app/views/form_section/_tick_box.html.erb
+++ b/app/views/form_section/_tick_box.html.erb
@@ -13,7 +13,7 @@
 
   <div class="medium-8 columns">
     <% if tick_box.required %><span class="required form-section-required">*</span><% end %>
-    <%= check_box_tag name, "true", value == true, :disabled => tick_box.editable == false ? true : false, :id => field_id, :editable => tick_box.editable, :class => "tick_box", required: tick_box.required %>
+    <%= check_box_tag name, "true", value == true, :disabled => tick_box.disabled, :id => field_id, :editable => tick_box.editable, :class => "tick_box", required: tick_box.required %>
     <%= label_tag field_id, label, class: "tick_box_label" if label.present? %>
     <%= hidden_field_tag name, "false", :id => "#{field_id}_" %>
   </div>
