--- a/app/views/form_section/_select_box.html.erb
+++ b/app/views/form_section/_select_box.html.erb
@@ -19,7 +19,7 @@
     <% if select_box.multi_select %>
       <%= select_tag name, options_for_select(select_box.select_options(formObject, @lookups, @locations), value), 'multiple' => '',
           'class' => 'chosen-select', 'data-placeholder' => t("fields.chosen_placeholder"), 'id' => field_id,
-          :data => { :field_tags => field_tags}, required: select_box.required, :editable => select_box.editable, :disabled => select_box.editable == false ? true : false %>
+          :data => { :field_tags => field_tags}, required: select_box.required, :editable => select_box.editable, :disabled => select_box.disabled %>
     <% elsif select_box.searchable_select %>
       <%= select_tag name, options_for_select(select_box.select_options(formObject, @lookups, @locations), value),
           'class' => 'chosen-select', 'data-placeholder' => t("fields.chosen_placeholder"), :id => field_id,
@@ -30,17 +30,16 @@
         # select_box.searchable_select is a hack, refactor, refactor, refactor!  
 
         #TODO: Pending disabled for choosen.
-        disabled_select_box = !select_box.editable
         #workaround to avoid present the default value (Select...) when the select_box
         #is disable and we are on new record.
-        if disabled_select_box && value.blank? && formObject.new_record?
+        if select_box.disabled && value.blank? && formObject.new_record?
           select_box_select_options = []
         else
           select_box_select_options = select_box.select_options(formObject, @lookups, @locations)
         end
       %>
       <%= select_tag name, options_for_select(select_box_select_options, value), :id => field_id,
-          :data => { :field_tags => field_tags}, :disabled => disabled_select_box, :required => select_box.required, :editable => select_box.editable %>
+          :data => { :field_tags => field_tags}, :disabled => select_box.disabled, :required => select_box.required, :editable => select_box.editable %>
     <% end %>
     <% if select_box.guiding_questions.present? %>
       <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0',
