--- a/app/views/form_section/_subform_expand_collapse_header.html.erb
+++ b/app/views/form_section/_subform_expand_collapse_header.html.erb
@@ -89,7 +89,7 @@
   </div>
   <div class="medium-5 columns">
     <span class="collapse_expand_subform expanded <%=summary_section_class%>" style="<%=disable_action_buttons%>">-</span>
-    <% if subform.editable %>
+    <% if !subform.disabled %>
       <%= link_to t('fields.remove'), '', class: "subform_remove grey-button", style: disable_action_buttons,
           data: { message: t('fields.subform_remove_message') } if current_actions(action: ['update', 'edit', 'new', 'create']) %>
     <% end %>
