--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -28,6 +28,16 @@
           <%= fld.check_box :hide_on_view_page?, {}, "true", "false" %>
         </div>
       </div>
+    </p
+    <p class="chkbox_disabled">
+      <div class="row">
+        <div class="medium-3 columns">
+          <%= fld.label :disabled, t("disabled"), :class => 'key inline' %>
+        </div>
+        <div class="medium-9 columns">
+          <%= fld.check_box :disabled?, {}, "true", "false" %>
+        </div>
+      </div>
     </p>
     <% if @field.type == 'date_field' %>
     <p class="date_validation_method">
