added validation for admin_level. Removed load_all_locations call in controller since method no longer exists

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -5,7 +5,7 @@
   parent_selection ||= (parent.present? ? parent.id : "")
   admin_level_options = Location::ADMIN_LEVELS
   admin_level_selection = ((@location.present? && @location.admin_level.present?) ? @location.admin_level : "")
-  admin_level_disabled = parent.present?
+  admin_level_disabled = !@location.admin_level_required?
 %>
 
 <% content_for :record_sub_nav do %>
