--- a/app/views/form_section/_date_field.html.erb
+++ b/app/views/form_section/_date_field.html.erb
@@ -16,7 +16,7 @@
   <div class="medium-8 columns">
     <% if date_field.required %><span class="required form-section-required">*</span><% end %>
     <%= text_field_tag name, value, :class => 'form_date_field has_help', :id => field_id,
-    :disabled => date_field.disabled, :editable => date_field.editable,
+    :disabled => date_field.disabled,
     "data-abide-validator" => date_validator, required: date_field.required %>
     <small class="error"><%= I18n.t(error_msg)%></small>
     <p class="help"><%= t("fields.date_help") %></p>
