--- a/app/views/form_section/_date_range.html.erb
+++ b/app/views/form_section/_date_range.html.erb
@@ -25,14 +25,14 @@
       <% end %>
     </div>
     <div class="date" style ="<%= "display:none;" if date_or_date_range == "date_range" %>">
-      <%= text_field_tag name, value_date_field, :class => 'form_date_field has_help', :disabled => date_range.disabled, :id => field_id, :editable => date_range.editable %>
+      <%= text_field_tag name, value_date_field, :class => 'form_date_field has_help', :disabled => date_range.disabled, :id => field_id %>
       <p class="help"><%= t("fields.date_help") %></p>
     </div>
     <div class="date_range" style ="<%= "display:none;" if date_or_date_range == "date" %>" data-on-errors="<%= t('errors.models.date_range_invalid', :field_name => date_range.display_name) %>">
       <span><%="#{I18n.t("fields.date_range.from")}:"%></span>
-      <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_from"), value_from, :class => 'form_date_field', :disabled => date_range.disabled, :id => "#{field_id}_from", :editable => date_range.editable %>
+      <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_from"), value_from, :class => 'form_date_field', :disabled => date_range.disabled, :id => "#{field_id}_from" %>
       <span><%="#{I18n.t("fields.date_range.to")}:"%></span>
-      <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_to"), value_to, :class => 'form_date_field has_help', :disabled => date_range.disabled, :id => "#{field_id}_to", :editable => date_range.editable %>
+      <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_to"), value_to, :class => 'form_date_field has_help', :disabled => date_range.disabled, :id => "#{field_id}_to" %>
         <p class="help"><%= t("fields.date_help") %></p>
     </div>
   </div>
