--- a/app/views/form_section/_radio_button.html.erb
+++ b/app/views/form_section/_radio_button.html.erb
@@ -14,8 +14,7 @@
     <% show_horizontal = radio_button.options.select { |option| option.option_name.length > 8 }.blank? && radio_button.options.length <= 3 %>
     <% radio_button.options.each do |option| %>
       <%radio_button_id = "#{radio_button.form.name.dehumanize}_#{sanitize_to_id(name)}_#{option.option_name.dehumanize}"%>
-      <%= radio_button_tag name, option.option_name, (value||[]).include?(option.option_name),  :id => radio_button_id, :disabled => radio_button.disabled, :editable => radio_button.editable,
-          :data => { :field_tags => field_tags } %>
+      <%= radio_button_tag name, option.option_name, (value||[]).include?(option.option_name),  :id => radio_button_id, :disabled => radio_button.disabled, :data => { :field_tags => field_tags } %>
       <%= label_tag radio_button_id, option.option_name %>
       <% unless show_horizontal %>
         <br>
