--- a/app/assets/stylesheets/primero/potential_match.scss
+++ b/app/assets/stylesheets/primero/potential_match.scss
@@ -3,24 +3,40 @@
 ////////////////////////////////////////////////
 
 .pm_div {
-  border: 2px $green_color solid;
-  margin-bottom: 15px;
+  border: 1px $green_color solid;
+  margin-bottom: 20px;
   .pm_table {
     border-spacing: 0px !important;
     margin-bottom: 0em !important;
     border: none;
+    transition: 300ms ease-out;
     tr th, tr td {
       text-align: center;
-
+    }
+    tr:not(:first-child) {
+      display: none;
     }
     th {
+      pointer-events: none;
       background-color: $light_green_color;
       color: $green_color;
       text-transform: uppercase;
     }
-    :not(.record_list_view) tr td{
+    :not(.record_list_view) tr td {
       background: none !important;
     }
   }
+  button {
+    margin: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: $desat_green_color;
+    text-decoration: underline;
+    font-size: 0.9rem;
+    outline: none;
+    &:hover, &:focus {
+      color: white;
+      background-color: $green_color;
+    }
+  }
 }
-
