--- a/app/views/potential_matches/_summary_row.html.erb
+++ b/app/views/potential_matches/_summary_row.html.erb
@@ -1,19 +1,24 @@
 <div class="pm_div">
   <table style="width:100%" class="pm_table">
+    <thead>
     <tr>
       <th><%= t("potential_match.inquirer_id") %></th>
       <th>Name of Inquirer</th>
       <th>Date of inquiry</th>
       <th>Tracing request</th>
     </tr>
+    </thead>
+    <tbody>
     <tr>
       <td><%= link_to text_to_identify_potential_match_tracing_request(record), tracing_request_path(record["tr_uuid"]), class: 'id_link' %></td>
       <td><%= record["relation_name"] %></td>
       <td><%= record["inquiry_date"] %></td>
       <td><%= record["subform_tracing_request_name"] %></td>
     </tr>
+    </tbody>
   </table>
-  <table style="width:100%" class="pm_table">
+  <table style="width:100%; border-bottom: #86a05d 1px solid;" class="pm_table tablesorter" id="myTable_<%= record["subform_tracing_request_id"] %>">
+    <thead>
     <tr>
       <th>CHILD ID#</th>
       <th>AGE</th>
@@ -22,6 +27,11 @@
       <th>SOCIAL WORKER</th>
       <th>SCORE</th>
     </tr>
+    </thead>
+    <tbody>
     <%= render :partial => "#{controller.controller_name}/child_summary_row", collection: record["match_details"], as: :detail %>
+    </tbody>
   </table>
+  <button style="width:100%" id="show_more_<%= record["subform_tracing_request_id"] %>">show more</button>
+
 </div>
