--- a/app/views/potential_matches/_child_summary_row.html.erb
+++ b/app/views/potential_matches/_child_summary_row.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= link_to text_to_identify_potential_match_child(detail), case_path(detail["child_id"]), class: 'id_link' %></td>
+  <td class="id_column"><%= link_to text_to_identify_potential_match_child(detail), case_path(detail["child_id"]), class: 'id_link' %></td>
   <td><%= detail["age"] %></td>
   <td><%= detail["sex"] %></td>
   <td><%= detail["registration_date"] %></td>
