limit five-digit after the decimal point

--- a/app/views/potential_matches/_child_summary_row.html.erb
+++ b/app/views/potential_matches/_child_summary_row.html.erb
@@ -4,5 +4,5 @@
   <td><%= detail["sex"] %></td>
   <td><%= detail["registration_date"] %></td>
   <td><%= detail["owned_by"] %></td>
-  <td><%= detail["average_rating"] %></td>
+  <td><%= detail["average_rating"].round(5) %></td>
 </tr>
